# nerfview

./: .envrc  .gitignore  README.md  pyproject.toml
.github/workflows/: core_tests.yml  publish.yml
examples/: .gitignore  00_dummy_rendering.py  01_dummy_training.py  02_mesh_rendering.py  03_gsplat_rendering.py  04_gsplat_training.py  basic.py  requirements.txt
examples/assets/: .gitignore  download_colmap_garden.sh  download_dragon_mesh.sh  download_gsplat_ckpt.sh  download_gsplat_data.sh
examples/gsplat_utils/: utils.py
examples/gsplat_utils/datasets/: colmap.py
examples/nerfacc/: .gitignore  nerfview.patch  setup.sh
nerfview/: __init__.py  _renderer.py  renderer.py  server.py  utils.py  viewer.py
