[build-system]
requires = ["setuptools==65.6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "nerfview"
version = "0.0.0"
authors = []
requires-python = ">=3.8"
dependencies = ["viser==0.2.1", "jaxtyping==0.2.29"]

[project.optional-dependencies]
examples = [
  "tyro==0.8.4",
  "nvdiffrast @ git+https://github.com/NVlabs/nvdiffrast.git@main",
  "roma",
  "gsplat==1.0.0",
  "imageio[ffmpeg]",
  "scikit-learn",
  "torchmetrics[image]",
  "opencv-python",
  "tensorboard",
  "pycolmap @ git+https://github.com/rmbrualla/pycolmap@cc7ea4b7301720ac29287dbe450952511b32125e",
]
dev = ["black", "isort", "ipdb"]

[tool.setuptools.packages.find]
include = ["nerfview"]

[tool.isort]
profile = "black"
