[build-system]
requires = ["setuptools==65.6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "nerfview"
version = "0.0.3"
description = "Interactive NeRF rendering web viewer"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["viser>=0.2.1", "jaxtyping>=0.2.15"]

[project.optional-dependencies]
dev = ["black", "isort", "ipdb"]

[project.urls]
"GitHub" = "https://github.com/hangg7/nerfview"

[tool.setuptools.packages.find]
include = ["nerfview"]

[tool.isort]
profile = "black"
